@@ -4158,11 +4158,17 @@ INT_PTR CALLBACK VideoOptionsProc(HWND hwndDlg, UINT uMsg, WPARAM wParam, LPARAM
          m_useAA = 0;
       SendMessage(hwndCheck, BM_SETCHECK, (m_useAA != 0) ? BST_CHECKED : BST_UNCHECKED, 0);
 
-      hwndCheck = GetDlgItem(hwndDlg, IDC_AO_ALL_TABLES);
+      hwndCheck = GetDlgItem(hwndDlg, IDC_DYNAMIC_AO);
       int m_useAO;
-      hr = GetRegInt("Player", "USEAO", &m_useAO);
+      hr = GetRegInt("Player", "DynamicAO", &m_useAO);
       if (hr != S_OK)
          m_useAO = 0;
+      SendMessage(hwndCheck, BM_SETCHECK, (m_useAO != 0) ? BST_CHECKED : BST_UNCHECKED, 0);
+
+      hwndCheck = GetDlgItem(hwndDlg, IDC_DISABLE_AO);
+      hr = GetRegInt("Player", "DisableAO", &m_useAO);
+      if (hr != S_OK)
+          m_useAO = 0;
       SendMessage(hwndCheck, BM_SETCHECK, (m_useAO != 0) ? BST_CHECKED : BST_UNCHECKED, 0);
 
       int fxaa;
@@ -4398,9 +4404,13 @@ INT_PTR CALLBACK VideoOptionsProc(HWND hwndDlg, UINT uMsg, WPARAM wParam, LPARAM
             size_t m_useAA = SendMessage(hwndUseAA, BM_GETCHECK, 0, 0);
             SetRegValue("Player", "USEAA", REG_DWORD, &m_useAA, 4);
 
-            HWND hwndUseAO = GetDlgItem(hwndDlg, IDC_AO_ALL_TABLES);
+            HWND hwndUseAO = GetDlgItem(hwndDlg, IDC_DYNAMIC_AO);
             size_t m_useAO = SendMessage(hwndUseAO, BM_GETCHECK, 0, 0);
-            SetRegValue("Player", "USEAO", REG_DWORD, &m_useAO, 4);
+            SetRegValue("Player", "DynamicAO", REG_DWORD, &m_useAO, 4);
+
+            hwndUseAO = GetDlgItem(hwndDlg, IDC_DISABLE_AO);
+            m_useAO = SendMessage(hwndUseAO, BM_GETCHECK, 0, 0);
+            SetRegValue("Player", "DisableAO", REG_DWORD, &m_useAO, 4);
 
             HWND hwndStereo3D = GetDlgItem(hwndDlg, IDC_3D_STEREO);
             size_t stereo3D = SendMessage(hwndStereo3D, BM_GETCHECK, 0, 0);
