@@ -222,7 +222,9 @@ VP 10.0.0 Changelog
 - remove old shadowing code and replace it with screen space ambient occlusion
   additionally one can also enable ambient occlusion for dynamic objects (via the global video preferences and also the table options)
 
-- add special flag to the video options to force using the NVIDIA API for ambient occlusion ()only for NVIDIA cards). Use this option if the default detection gives you errors.
+- add flag "Use NVIDIA API" to the video options to force using the NVIDIA API for ambient occlusion ()only for NVIDIA cards). Use this option if the default detection gives you errors.
+
+- add ambient occlusion disable flag which disables AO completely
 
 - its not necessary anymore to manually override the texture filtering quality in the global gfx cards options (NVIDIA control panel, etc)
   if you need HQ filtering, please only use the checkbox in the VP video preferences instead
